# SI_Mandatory_2_part_2_Web_scraping

./: database.py  movies.db  pyproject.toml  web_scraping.py
