[tool.poetry]
name = "mandatory-2-web-scraping"
version = "0.1.0"
description = ""
authors = ["nicolaiokkels <nico902t@stud.kea.dk>"]
readme = "README.md"
packages = [{include = "mandatory_2_web_scraping"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
